read socket and disconnect

--- a/projeto2/Makefile
+++ b/projeto2/Makefile
@@ -10,7 +10,7 @@ INCLUDE = include/
 BIN = bin/
 
 # ftp://[<user>:<password>@]<host>/<url-path>
-FTP_FEUP = ftp://anonymous:qualquer-password@ftp.up.pt/
+FTP_FEUP = ftp://anonymous:qualquer-password@ftp.up.pt/pub/robots.txt
 
 # Targets
 .PHONY: all
